<resources>
    <string name="app_name">Revu</string>
    <string name="app_description">An App for your Revision Needs</string>
    <string name="home_message">Every big step start with small step. Add your first topic and start your journey!</string>
    <string name="server_client_id">837958413607-ab23q47p5njfgepkhh8np5q8sobiumse.apps.googleusercontent.com</string>
    <string name="topics_message">Add topics using the add button below</string>
    <string name="dummy_content">The British Raj was the period of British rule on the Indian subcontinent between 1858 and 1947. The system of governance was instituted in 1858 when the rule of the East India Company was transferred to the Crown in the person of Queen Victoria. The British Raj was the period of British rule on the Indian subcontinent between 1858 and 1947.  .</string>
    <string name="title_notification_reminder">Revise Topics</string>
    <string name="description_notification_reminder">Let us revise the topics!</string>
    <string name="reminders_notification_channel">Reminder</string>
    <string name="reminders_notification_channel_id">reminder_channel</string>
    <string name="total_free_topic_text">%d/%d free topic</string>
    <string name="select_image">Select Images</string>
    <string name="finding_revu_useful">Finding Revu Useful?</string>
    <string name="vocab_sub_title">Learn a different set of word everyday!</string>
    <string name="vocab_title">Build Your Vocabulary</string>
    <string name="learn_now">Learn Now</string>
    <string name="good_morning_text">Good morning</string>
    <string name="save_as_topic">Save as Topic</string>
    <string name="memorize_text">Want to memorize this permanently?</string>
    <string name="could_you_take_a_moment_to_rate_us">Could you take a moment to rate us?</string>
</resources>