<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.fragments.home_fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/good_morning_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/good_morning_text"
            android:textColor="@color/gray_text"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/good_morning_text"
            app:layout_constraintWidth_percent="0.45"
            tools:text="Jagger" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/subscribe"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="7dp"
                app:srcCompat="@drawable/crown" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/refer_button"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="7dp"
                app:srcCompat="@drawable/share" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/stats_button"
                android:layout_width="26dp"
                android:layout_height="34dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="7dp"
                app:srcCompat="@drawable/stats" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/how_to_button"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="7dp"
                app:srcCompat="@drawable/information_vector_icon" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_white_bg">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/vocab_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:includeFontPadding="false"
            android:paddingTop="16dp"
            android:text="@string/vocab_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/vocab_sub_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/learn_now"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/vocab_sub_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:lineSpacingExtra="-4sp"
            android:paddingVertical="10dp"
            android:text="@string/vocab_sub_title"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/vocab_title"
            app:layout_constraintTop_toBottomOf="@+id/vocab_title" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/learn_now"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/learn_now"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/vocab_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/vocab_title" />

        <!--
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Learn a different set of words everyday!"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp" />

                <Button
                    android:id="@+id/daily_vocab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Learn Now"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppins_medium"
                    android:background="@drawable/button_bg"
                    android:layout_gravity="start"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="10dp" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/home_tabs"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tab_today"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tabs_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="Today"
            android:textColor="@color/tabs_text_color"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tab_missed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tabs_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="Missed"
            android:textColor="@color/tabs_text_color"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tab_upcoming"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tabs_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="Upcoming"
            android:textColor="@color/tabs_text_color"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_illustration_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/home_illustration"
            android:layout_width="240dp"
            android:layout_height="240dp"
            app:srcCompat="@drawable/start_journey" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_illustration_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center_horizontal"
            android:text="Start Your Journey"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/home_illustration_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/home_message"
            android:textColor="@color/gray_text"
            android:textSize="16sp" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/topics_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        android:visibility="visible" />

</LinearLayout>